--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(Tutorial_VERSION_MAJOR 1)
 set(Tutorial_VERSION_MINOR 0)
 
 # should we use our own math functions?
-include (CheckFunctionExists)
+include (${CMAKE_ROOT}/Modules/CheckFunctionExists.cmake)
 check_function_exists(log HAVE_LOG)
 check_function_exists(exp HAVE_EXP)
 
@@ -18,7 +18,7 @@ configure_file (
 
 option (USE_MYMATH "Use tutorial provided math implementation" ON)
 
-# do the system provide the log and exp function?
+include_directories("${PROJECT_BINARY_DIR}")
 
 # add binary tree to the search path for include files
 if (USE_MYMATH)
@@ -40,4 +40,12 @@ include(CTest)
 add_test (TutorialRuns Tutorial 25)
 # do sqrt(25)
 add_test (TutorialComps25 Tutorial 25)
+
+# build a CPack driven installer package
+include (InstallRequiredSystemLibraries)
+set (CPACK_RESOURCE_FILE_LICENSE
+     "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
+set (CPACK_PACKAGE_VERSION_MAJOR "${Tutorial_VERSION_MAJOR}")
+set (CPACK_PACKAGE_VERSION_MINOR "${Tutorial_VERSION_MINOR}")
+include (CPack)
 
